--- a/index-functional.html
+++ b/index-functional.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <script src="./js/OOP.js" type="module" defer></script>
+    <div class="count">-</div>
+    <button id="enable" type="button">Enable</button>
+    <button id="add" type="button">+1</button>
+    <button id="disable" type="button">Disable</button>
+
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 
 </html>
